# CMM

./: .flake8  .gitignore  PLAN.md  message.sh  pyproject.toml  test_decoder.py  test_end_to_end.py
CMM/: .flake8  .gitignore  Makefile  PLAN.md  grammar.py  pyproject.toml
CMM/src/: __main__.py  grammar.py  io_utils.py  models.py  tokenizer_vocab.py
data/input/: function_calling_tests.json
src/: __init__.py  __main__.py  decoder.py  io_utils.py  models.py  pipeline.py  prompts.py  tokenizer_vocab.py
src/decoding/: __init__.py  primitives.py  values.py
src/grammar/: __init__.py  fsm.py  token_sets.py  tries.py
