[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling for small LLMs via constrained decoding"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0", "numpy>=1.24", "llm-sdk"]

[tool.uv]
package = false

[tool.uv.sources]
llm-sdk = { path = "llm_sdk", editable = true }

[tool.mypy]
exclude = ["llm_sdk/", "tests/", "\\.venv/"]

namespace_packages = false

# llm_sdk is your own local sub-package with no py.typed marker, so mypy
# can see it's installed but refuses to trust its types by default.
[[tool.mypy.overrides]]
module = "llm_sdk.*"
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100

[tool.ruff]
line-length = 79
